# aipet_llm

./: .gitignore  Makefile  README.md  pyproject.toml
configs/: low_latency.yaml  sft.yaml  two_stage.yaml
data/processed/: train.jsonl
data/raw/: example.jsonl  example_context.json
scripts/: eval_infer.py  export_schema.py  infer.py  infer_simple.py  prepare_dataset.py  runtime_check.py  serve_api.py  teacher_label.py  train_classifier.py  train_say_sft.py  train_sft.py  validate_dataset.py
src/: config.py  dataset.py  inference.py  train.py
src/aipet_distill/: __init__.py  constants.py  eval_infer.py  jsonl.py  prompts.py  schemas.py  simple_format.py  train_action_classifier.py  train_say_sft.py  train_sft.py  two_stage_infer.py  validate.py
src/aipet_distill/api/: __init__.py  server.py
