[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aipet-llm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.2.0",
    "transformers>=4.40.0",
    "datasets>=2.19.0",
    "peft>=0.10.0",
    "accelerate>=0.29.0",
    "sentencepiece>=0.2.0",
    "tqdm>=4.66.0",
]

[tool.setuptools.packages.find]
where = ["."]
